--- a/requirements.txt
+++ b/requirements.txt
@@ -99,7 +99,7 @@ platformdirs==3.10.0
 ply==3.11
 prometheus-client==0.14.1
 prompt-toolkit==3.0.43
-protobuf
+protobuf==3.20
 psutil==5.9.0
 pure-eval==0.2.2
 pyarrow==11.0.0
